name: pusher-http-haskell
version: 1.5.1.14
cabal-version: 1.18
build-type: Simple
license: MIT
license-file: LICENSE
copyright: (c) Will Sewell, 2016
maintainer: me@willsewell.com
stability: experimental
homepage: https://github.com/WillSewell/pusher-http-haskell
bug-reports: https://github.com/WillSewell/pusher-http-haskell/issues
synopsis: Haskell client library for the Pusher Channels HTTP API
description:
    Functions that correspond to endpoints of the Pusher Channels
    HTTP API. Messages can be triggered, and information about the
    channel can be queried. Additionally there are functions
    for authenticating users of private and presence channels.
category: Network
author: Will Sewell
tested-with: GHC >=8.4.4

library

    ghc-options: -Wcompat -Wmissing-signatures
    exposed-modules:
        Network.Pusher
        Network.Pusher.Internal
        Network.Pusher.Internal.Auth
        Network.Pusher.Internal.HTTP
        Network.Pusher.Protocol
    build-depends:
        aeson >=1.0 && <1.6,
        base >=4.11 && <4.15,
        bytestring ==0.10.*,
        base16-bytestring ==0.1.*,
        cryptonite >= 0.6 && <0.28,
        hashable >=1.2 && <1.4,
        http-client >=0.4.30 && <0.8,
        http-types >=0.8 && <0.13,
        memory >= 0.7 && <0.16,
        text ==1.2.*,
        time >=1.5 && <1.11,
        transformers >=0.4 && <0.6,
        unordered-containers ==0.2.*,
        vector >=0.10 && <0.13
    default-language: Haskell2010
    default-extensions: OverloadedStrings
    hs-source-dirs: src
    other-modules:
        Network.Pusher.Data
        Network.Pusher.Error
        Network.Pusher.Internal.Util
        Network.Pusher.Webhook
    ghc-options: -Wall

test-suite tests

    ghc-options: -Wcompat -Wmissing-signatures
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        aeson -any,
        base -any,
        bytestring -any,
        base16-bytestring -any,
        cryptonite -any,
        hspec -any,
        http-client -any,
        http-types -any,
        pusher-http-haskell -any,
        QuickCheck -any,
        time -any,
        text -any,
        transformers -any,
        unordered-containers -any,
        vector -any,
        scientific -any
    default-language: Haskell2010
    default-extensions: OverloadedStrings
    hs-source-dirs: test
    other-modules:
        Auth
        Protocol
        Webhook
    ghc-options: -Wall
