cabal-version: 1.18
name:          pusher-http-haskell
version:       2.1.0.18
license:       MIT
license-file:  LICENSE
copyright:     (c) Will Sewell, 2016
maintainer:    me@willsewell.com
author:        Will Sewell
stability:     stable
tested-with:   ghc >=8.8.4
homepage:      https://github.com/WillSewell/pusher-http-haskell
bug-reports:   https://github.com/WillSewell/pusher-http-haskell/issues
synopsis:      Haskell client library for the Pusher Channels HTTP API
description:
    Functions that correspond to endpoints of the Pusher Channels
    HTTP API. Messages can be triggered, and information about the
    channel can be queried. Additionally there are functions
    for authenticating users of private and presence channels.

category:      Network
build-type:    Simple

library
    exposed-modules:
        Network.Pusher
        Network.Pusher.Internal
        Network.Pusher.Internal.Auth
        Network.Pusher.Internal.HTTP
        Network.Pusher.Protocol

    hs-source-dirs:     src
    other-modules:
        Network.Pusher.Data
        Network.Pusher.Error
        Network.Pusher.Internal.Util
        Network.Pusher.Webhook

    default-language:   Haskell2010
    default-extensions: OverloadedStrings
    ghc-options:        -Wcompat -Wmissing-signatures -Wall
    build-depends:
        aeson >=1.0 && <2.3,
        base >=4.11 && <4.20,
        bytestring >=0.10 && <0.13,
        base16-bytestring >=0.1 && <1.1,
        crypton >=0.32 && <1.1,
        hashable >=1.2 && <1.6,
        http-client >=0.4.30 && <0.8,
        http-client-tls ==0.3.*,
        http-types >=0.8 && <0.13,
        memory >=0.7 && <0.19,
        text >=1.2 && < 2.2,
        time >=1.5 && <1.14,
        unordered-containers ==0.2.*

test-suite tests
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     test
    other-modules:
        Auth
        Protocol
        Webhook

    default-language:   Haskell2010
    default-extensions: OverloadedStrings
    ghc-options:        -Wcompat -Wmissing-signatures -Wall
    build-depends:
        aeson -any,
        base -any,
        bytestring -any,
        hspec -any,
        pusher-http-haskell -any,
        QuickCheck -any,
        text -any,
        unordered-containers -any
