name:                 api-example
version:              0.0.0.1
cabal-version:        >=1.18
build-type:           Simple
license:              MIT
copyright:            (c) Will Sewell, 2016
author:               Will Sewell
maintainer:           me@willsewell.com
stability:            experimental
synopsis:             Example usage of pusher-http-haskell to trigger and query
tested-with:          GHC == 7.10.3

executable api-example
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  main-is:            Main.hs
  build-depends:      base,
                      pusher-http-haskell,
                      text,
                      unordered-containers,
                      yaml
  ghc-options:        -Werror
                      -Wall
                      -Wcompat
                      -Whi-shadowing
                      -Wmissing-signatures
