name: api-example
version: 0.0.0.1
cabal-version: >=1.18
build-type: Simple
license: MIT
copyright: (c) Will Sewell, 2016
maintainer: me@willsewell.com
stability: experimental
synopsis: Example usage of pusher-http-haskell to trigger and query
author: Will Sewell

executable api-example
    main-is: Main.hs
    build-depends:
        base -any,
        pusher-http-haskell -any,
        text -any,
        unordered-containers -any,
        yaml -any
    default-language: Haskell2010
    default-extensions: OverloadedStrings
    ghc-options: -Wall -Wcompat -Wmissing-signatures
