cabal-version: >=1.18
name:          api-example
version:       0.0.0.1
license:       MIT
copyright:     (c) Will Sewell, 2016
maintainer:    me@willsewell.com
author:        Will Sewell
stability:     experimental
synopsis:      Example usage of pusher-http-haskell to trigger and query
build-type:    Simple

executable api-example
    main-is:            Main.hs
    default-language:   Haskell2010
    default-extensions: OverloadedStrings
    ghc-options:        -Wall -Wcompat -Wmissing-signatures
    build-depends:
        base -any,
        pusher-http-haskell -any,
        text -any,
        unordered-containers -any,
        yaml -any
