name:                 auth-example
version:              0.0.0.1
cabal-version:        >=1.18
build-type:           Simple
license:              MIT
copyright:            (c) Will Sewell, 2016
author:               Will Sewell
maintainer:           me@willsewell.com
stability:            experimental
synopsis:             Example usage auth endpoint using pusher-http-haskell
tested-with:          GHC == 7.10.3

executable auth-example
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  main-is:            Main.hs
  build-depends:      aeson,
                      base,
                      bytestring,
                      containers,
                      pusher-http-haskell,
                      snap-core,
                      snap-server,
                      text,
                      transformers,
                      unordered-containers,
                      yaml
  ghc-options:        -Wall
                      -Wcompat
                      -Whi-shadowing
                      -Wmissing-signatures
