cabal-version: >=1.18
name:          auth-example
version:       0.0.0.1
license:       MIT
copyright:     (c) Will Sewell, 2016
maintainer:    me@willsewell.com
author:        Will Sewell
stability:     experimental
synopsis:      Example usage auth endpoint using pusher-http-haskell
build-type:    Simple

executable auth-example
    main-is:            Main.hs
    default-language:   Haskell2010
    default-extensions: OverloadedStrings
    ghc-options:        -Wall -Wcompat -Wmissing-signatures
    build-depends:
        aeson -any,
        base -any,
        bytestring -any,
        containers -any,
        pusher-http-haskell -any,
        snap-core -any,
        snap-server -any,
        text -any,
        transformers -any,
        unordered-containers -any,
        yaml -any
