name:                 push-example
version:              0.0.0.1
cabal-version:        >=1.18
build-type:           Simple
license:              MIT
stability:            experimental
synopsis:             Example usage of pusher-http-haskell to send push notifications.
executable push-example
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  main-is:            Main.hs
  build-depends:      base,
                      pusher-http-haskell,
                      text,
                      aeson,
                      bytestring,
                      unordered-containers,
                      yaml
  ghc-options:        -Wall
                      -Wcompat
                      -Whi-shadowing
                      -Wmissing-signatures
