cabal-version: >=1.18
name:          webhook-example
version:       0.0.0.1
license:       MIT
copyright:     (c) Samuel Yallop, 2017
maintainer:    me@willsewell.com
author:        Samuel A Yallop
stability:     experimental
synopsis:      Example usage of pusher-http-haskell to listen for webhooks
build-type:    Simple

executable webhook-example
    main-is:            Main.hs
    default-language:   Haskell2010
    default-extensions: OverloadedStrings
    ghc-options:        -Wall -Wcompat -Wmissing-signatures
    build-depends:
        base -any,
        pusher-http-haskell -any,
        text -any,
        yaml -any,
        bytestring -any,
        snap-core -any,
        snap-server -any,
        case-insensitive -any
